--- a/package.json
+++ b/package.json
@@ -11,10 +11,14 @@
   "dependencies": {
     "@react-navigation/native": "^6.1.8",
     "@react-navigation/stack": "^6.3.18",
+    "@supabase/supabase-js": "^2.38.0",
     "expo": "~49.0.13",
+    "expo-secure-store": "^12.5.0",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
-    "react-native": "^0.72.5"
+    "react-native": "^0.72.5",
+    "react-native-url-polyfill": "^2.0.0",
+    "v": "^0.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
