--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "@react-navigation/native": "^6.1.8",
     "@react-navigation/stack": "^6.3.18",
     "@supabase/supabase-js": "^2.38.0",
+    "base64-arraybuffer": "^1.0.2",
     "expo": "~49.0.13",
+    "expo-image-manipulator": "^11.5.0",
+    "expo-image-picker": "^14.5.0",
     "expo-secure-store": "^12.5.0",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
