--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@react-navigation/bottom-tabs": "^6.5.9",
     "@react-navigation/stack": "^6.3.18",
     "@supabase/supabase-js": "^2.38.0",
+    "axios": "^1.5.1",
     "base64-arraybuffer": "^1.0.2",
     "expo": "~49.0.13",
     "expo-image-manipulator": "^11.5.0",
