--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@react-navigation/bottom-tabs": "^6.5.9",
     "@react-navigation/stack": "^6.3.18",
+    "@supabase/storage-js": "^2.5.4",
     "@supabase/supabase-js": "^2.38.0",
     "axios": "^1.5.1",
     "base64-arraybuffer": "^1.0.2",
