--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-native": "^0.72.5",
+    "react-native-element-dropdown": "^2.10.0",
     "react-native-url-polyfill": "^2.0.0",
     "v": "^0.3.0"
   },
