--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "expo-image-picker": "^14.5.0",
     "expo-secure-store": "^12.5.0",
     "expo-status-bar": "~1.6.0",
+    "openai": "^4.11.1",
     "react": "18.2.0",
     "react-native": "^0.72.5",
     "react-native-element-dropdown": "^2.10.0",
