--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-native": "^0.72.5",
     "react-native-element-dropdown": "^2.10.0",
     "react-native-url-polyfill": "^2.0.0",
+    "supabase": "^1.100.1",
     "v": "^0.3.0"
   },
   "devDependencies": {
