--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "react-native": "^0.72.5",
     "react-native-element-dropdown": "^2.10.0",
     "react-native-loading-dots": "^1.4.0",
+    "react-native-reanimated-carousel": "^3.5.1",
+    "react-native-snap-carousel": "^3.9.1",
     "react-native-url-polyfill": "^2.0.0",
     "supabase": "^1.100.1",
     "v": "^0.3.0"
